cliqz@cliqz.com/cliqz-tab/page/newtab.css
/* common */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
    font-family: "Lato", sans-serif;
    font-weight: 400;
    font-size: 14px;
    line-height: 1.42857143;
}
body, html { height: 100%; }
a, a:hover, a:visited { color: inherit; text-decoration: inherit; }
.hidden { display: none; }
.ellipsis { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; -o-text-overflow: ellipsis; }

/* containers */
.background {
  background-color: #ecf0f1;
  min-height: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
}
.search-container { padding-top: 100px; margin: 0 auto; overflow: hidden; }
@media (min-width: 768px) { .search-container { width: 750px; } }
@media (min-width: 992px) { .search-container { width: 970px; } }
@media (min-width: 1200px) { .search-container { width: 1170px; } }

/* history */
.history-lis {
    margin-bottom: 5px;
}
.history-lis a {
    display: block;
}
.history-lis .mostvisited {
    font-family: "Lato", sans-serif;
    font-weight: 300;
    float: left;
    width: 25%;
}
@media(max-width:1200px) {
    .history-lis .mostvisited {
        width: 33.3333%;
    }
}
@media(max-width:800px) {
    .history-lis .mostvisited {
        width: 50%;
    }
}
.history-lis .mostvisited[selected="selected"] .history-row {
    border: 2px solid #999;
    margin: 3px;
}
.history-row {
    margin: 5px;
    padding: 15px 10px;
    background-color: white;
}
.history-icon {
    float: left;
}
.history-desc {
    float: left;
    width: calc(100% - 40px);
    padding-left: 5px;
}
.history-title {
    color: black;
    font-size: 14px;
    font-weight: 400;
}
.history-url {
    color: gray;
    font-size: 11px;
}
.history-lis a:hover .history-url.blurred, .history-lis a .history-url.hovered {
    display: none;
}
.history-lis a .history-url.blurred, .history-lis a:hover .history-url.hovered {
    display: block;
}
.cliqz-icon {
    width: 35px;
    height: 35px;
    border-radius: 50%;
    margin: 1px 5px 0 0;
    text-align: center;
    padding-top: 7px;
    color: white;
    font-weight: bold;
    background-size: 25px 25px;
    background-repeat: no-repeat;
    background-position: 5px 5px;
}

/* search */
.search-box { margin: 0 5px; }
#search {
    width: 100%;
    height: 30px;
    border: 1px solid #cccccc;
    padding: 0 15px;
    font-family: "Lato", sans-serif;
    font-weight: 300;
    font-size: 14px;
    outline: 0;
}

/* webkit */
::-webkit-input-placeholder { color: #777; font-size: 14px; font-weight: 300; font-family: "Lato", sans-serif; }
/* Firefox 19+ */
::-moz-placeholder          { color: #777;  font-size: 14px; font-weight: 300; font-family: "Lato", sans-serif; }
/* Firefox 18- */
:-moz-placeholder           { color: #777; font-size: 14px; font-weight: 300; font-family: "Lato", sans-serif; }

#search-dropdown {
    padding: 0;
    position: absolute;
    z-index: 1;
    background-color:white;
    color:black;
    overflow: hidden;
    border: 1px solid #cccccc;
    margin-top: 2px;
    border-bottom: 0;
}
#search-dropdown, #search-dropdown * {
    box-sizing: content-box;   
}

.result[selected="selected"] {
    color: #262626;
    text-decoration: none;
    background-color: #f5f5f5;
}

/* google bar */
.options-btn {
    position: absolute;
    z-index: 1;
    right: 50px;
    top: 20px;
    background-image: url(http://cdn.cliqz.com/extension/core/logos/google.svg);
    background-color: rgb(47, 196, 252);
    width: 35px;
    height: 35px;
    border-radius: 50%;
    background-size: 25px 25px;
    background-repeat: no-repeat;
    background-position: 5px 5px;
    cursor: pointer;
}

.options-container {
    display: none;
    position: absolute;
    z-index: 2;
    right: 20px;
    top: 62px;
    width: 166px;
    border: 1px solid #eee;
    background-color: white;
    box-shadow: 0 2px 10px rgba(0,0,0,.2);
    padding: 10px;
}
.options-container:before {
    border-color: transparent;
    border-bottom-color: #fff;
    border-style: dashed dashed solid;
    border-width: 0 8.5px 8.5px;
    content: ' ';
    position: absolute;
    right: 39px;
    top: -8px;
}

.option {
    display: inline-block !important;
    height: 67px;
    width: 70px;
    padding-top: 45px;
    background-repeat: no-repeat;
    background-position: center 20%;
    text-align: center;
    border: 1px solid transparent;
    background-size: 40px;
    cursor: pointer;
    font-family: "Lato", sans-serif;
}

.option:hover {
    border: 1px solid #e5e5e5;
    border-radius: 2px;
}

